Fix checked event type not showing when editing

--- a/frontend/src/features/Event.module.css
+++ b/frontend/src/features/Event.module.css
@@ -37,10 +37,14 @@
   font-weight: 600;
 }
 
-.eventHeader h4 {
+.eventHeader h3 {
   color: var(--darkblue);
   font-weight: 900;
   font-size: 1.4rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
 }
 
 .headerRightSide {
@@ -50,9 +54,9 @@
   align-items: center;
 }
 
-.eventHeader h3 {
+.eventHeader h4 {
   color: var(--green);
-  font-size: 1.2rem;
+  font-size: 1.3rem !important;
 }
 
 .event p {
@@ -66,6 +70,10 @@
   color: var(--blue);
   font-weight: bold;
   font-size: 1.3rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
 }
 
 .emptyHeartIcon {
@@ -94,7 +102,12 @@
 }
 
 .shortDesc {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
   overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
 }
 
 .overlayButtons {
